src/objects/Som_QuotexMedienklasse__c.object
<CustomObject>
    <description>Rohdaten aus dem System Pinball/Quotex, auf Ebene Medienklasse</description>
    <fields>
        <fullName>SomDig_SoA__c</fullName>
        <description>SoA des Vermarkters an Digital Gesamt</description>
        <formula>IF (  Som_MedienklasseGruppe__c =&apos;Digital&apos;,
Som_Brutto__c /  Som_Quotexdaten__r.Som_MklGruppeDigital__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>SoA des Vermarkters an Digital Gesamt</inlineHelpText>
        <label>Digital SoA (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Som_Brutto__c</fullName>
        <description>Brutto-Umsatz laut Nielsen</description>
        <inlineHelpText>Brutto-Umsatz laut Nielsen</inlineHelpText>
        <label>Brutto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Som_Jahr__c</fullName>
        <description>Geschäftsjahr</description>
        <inlineHelpText>Geschäftsjahr</inlineHelpText>
        <label>Jahr</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_MedienklasseGruppe__c</fullName>
        <description>Gruppierung von Medienklassen</description>
        <formula>CASE( Som_Medienklasse__c ,
  &apos;FERNSEHEN&apos;, &apos;TV&apos;, 
  &apos;ONLINE&apos;, &apos;Digital&apos;, 
  &apos;ZEITUNGEN&apos;, &apos;Print&apos;, 
  &apos;PUBLIKUMSZEITSCHRIFTEN&apos;, &apos;Print&apos;, 
  &apos;FACHZEITSCHRIFTEN&apos;, &apos;Print&apos;, 
  &apos;RADIO&apos;, &apos;Rest&apos;, 
  &apos;OUT OF HOME&apos;, &apos;Rest&apos;, 
  &apos;KINO&apos;, &apos;Rest&apos;, 
&apos;-&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gruppierung von Medienklassen</inlineHelpText>
        <label>MedienklasseGruppe</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_Medienklasse__c</fullName>
        <description>Nielsen-Medienklasse</description>
        <inlineHelpText>Nielsen-Medienklasse</inlineHelpText>
        <label>Medienklasse</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_NielsenId__c</fullName>
        <description>Nielsen-ID laut Pinball</description>
        <inlineHelpText>Nielsen-ID laut Pinball</inlineHelpText>
        <label>Nielsen-ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Som_NielsenName__c</fullName>
        <description>Nielsen-Firmenname</description>
        <inlineHelpText>Nielsen-Firmenname</inlineHelpText>
        <label>Nielsen-Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_ProRexId__c</fullName>
        <description>Accountnummer des Kunden</description>
        <inlineHelpText>Accountnummer des Kunden</inlineHelpText>
        <label>Accountnummer</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_Quotexdaten__c</fullName>
        <label>Quotexdaten</label>
        <referenceTo>Som_Quotex__c</referenceTo>
        <relationshipLabel>Quotexdaten Medienklasse</relationshipLabel>
        <relationshipName>Quotexdaten_Medienklasse</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Som_Sort__c</fullName>
        <description>Kombinierter Sortierschlüssel: MedienklasseGruppe + Brutto (absteigend)</description>
        <formula>Som_MedienklasseGruppe__c +
 TEXT(1000000000 - Som_Brutto__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Kombinierter Sortierschlüssel: MedienklasseGruppe + Brutto (absteigend)</inlineHelpText>
        <label>Sortierung</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_Vermarkter__c</fullName>
        <description>Vermarkter laut Nielsen</description>
        <inlineHelpText>Vermarkter laut Nielsen</inlineHelpText>
        <label>Vermarkter</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_ZeitraumTyp__c</fullName>
        <description>GJ=Gesamtjahr, YTM=YearToMonth</description>
        <inlineHelpText>GJ=Gesamtjahr, YTM=YearToMonth</inlineHelpText>
        <label>Zeitraum</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Quotexdaten Medienklasse</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Som_ProRexId__c</columns>
        <columns>Som_Medienklasse__c</columns>
        <columns>Som_MedienklasseGruppe__c</columns>
        <columns>Som_Jahr__c</columns>
        <columns>Som_Brutto__c</columns>
        <columns>Som_NielsenId__c</columns>
        <columns>Som_NielsenName__c</columns>
        <columns>Som_Vermarkter__c</columns>
        <columns>Som_ZeitraumTyp__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>thun</fullName>
        <columns>NAME</columns>
        <columns>Som_ProRexId__c</columns>
        <columns>Som_Medienklasse__c</columns>
        <columns>Som_MedienklasseGruppe__c</columns>
        <columns>Som_Jahr__c</columns>
        <columns>Som_Brutto__c</columns>
        <columns>Som_NielsenId__c</columns>
        <columns>Som_NielsenName__c</columns>
        <columns>Som_Vermarkter__c</columns>
        <columns>Som_ZeitraumTyp__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Som_NielsenName__c</field>
            <operation>startsWith</operation>
            <value>microsoft</value>
        </filters>
        <filters>
            <field>Som_Jahr__c</field>
            <operation>equals</operation>
            <value>2014</value>
        </filters>
        <filters>
            <field>Som_MedienklasseGruppe__c</field>
            <operation>equals</operation>
            <value>DIGITAL</value>
        </filters>
        <filters>
            <field>Som_ZeitraumTyp__c</field>
            <operation>equals</operation>
            <value>GJ</value>
        </filters>
        <filters>
            <field>Som_ProRexId__c</field>
            <operation>equals</operation>
            <value>2698</value>
        </filters>
        <label>thun</label>
        <language>de</language>
    </listViews>
    <nameField>
        <displayFormat>QuoMk-{0000}</displayFormat>
        <label>Quotex Daten Medienklasse-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotexdaten Medienklasse</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>